[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/gamejolt_api_v2/main.gd" type="Script" id=1]
[ext_resource path="res://AutoLoad/GameJoltIntegration/GameJoltIntegration.gd" type="Script" id=2]
[ext_resource path="res://AutoLoad/GameJoltIntegration/GameJoltSecret.gd" type="Script" id=3]

[node name="GameJoltIntegration" type="Node"]
script = ExtResource( 2 )

[node name="GameJoltAPI" type="HTTPRequest" parent="."]
script = ExtResource( 1 )

[node name="PingTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="GameJoltSecret" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="gamejolt_request_completed" from="GameJoltAPI" to="." method="_on_GameJoltAPI_gamejolt_request_completed"]
